	- After "Alternate" spell checker is called, cursor is repositioned on
	  the same line as before ^T was pressed. 
	- Moved config.h up in all .c files #include list (Albert Chin).
	- Added config.guess and config.sub to distribution because,
	  apparently, newer autoconf/automakes can't live without them.
	- Various spelling updates by David Lawrence Ramsey.
- configure.in:
	- New option, --enable-nanorc, which allows people to have a .nanorc
	  initialization file and set options normally used on the command
	  line, and color later on.
	- Added --enable-color option to allow color and syntax highlighting
	  (stub as of now).
- cut.c:
  add_to_cutbuffer()
	- Remove useless statements (Rocco).
  cut_marked_segment()
	- Add bizarre copy of bot node, else *BSD goes ballistic.
- faq.html:
	- Brought the FAQ up to date, many little changes (Jordi).
- files.c:
  do_browser()
	- Minor fixes to the processing of SELECT function (Rocco)
	- Added the "Goto Directory" code (Rocco)
- global.c:
	- Updated some of the lists for the "Goto Directory" code (Rocco)
- move.c:
  page_up()
	- Rewritten with a loop to make screen updates work when
	  mark is set (fixes bug #59).
- nano.1:
	- Added the missing -r flag (Jordi).
- nano.c:
  do_alt_speller()
	- Reposition cursor on same line as before ^T was called (Rocco)
  ABCD(), main() 
	- Add Alt-whatever-[a-d] support as well as Alt-whatever-[A-D].
  main()
	- Code to silently process "-g" and "-j" (Rocco)
- nano.h:
	- Updated the BROWSER_LIST_LEN for the "Goto Directory" code (Rocco)
- proto.h:
	- New shortcut list added: gotodir_list (Rocco).
- search.c:
  do_gotoline()
	- Optimizations, remove "$" goes-to-last-line, less messages (Rocco)
  do_replace()
	- If we manage to make it in somehow with VIEW_MODE on, abort
	  nicely (fixes BUG #59).
- utils.c
  strcasestr()
	- Replaced by mutt's mutt_stristr function, because the thought
	  of dynamically allocating memory and copying each line in a file